--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,13 @@
 	<display-name>Gradle + Spring MVC Hello World + XML</display-name>
 	<description>Spring MVC web application</description>
 
+	<!-- 
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/error/errorCommon.jsp</location>
+	</error-page> 
+	-->
+
 	<!-- For web context -->
 	<servlet>
 		<servlet-name>hello-dispatcher</servlet-name>
